--- a/jrx/manifest.json
+++ b/jrx/manifest.json
@@ -5,7 +5,7 @@
  "icons"            : {"48" : "icons/jrx-icon-48.png",
                        "96" : "icons/jrx-icon-96.png"},
  "content_scripts"  : [{"matches" : ["*://*/*"],
-                        "js"      : ["content.js"]}],
+                        "js"      : ["dist/content.js"]}],
  "browser_action"   : {"default_icon"  : "icons/jrx-icon-32.png",
                        "default_title" : "Jaeck Russell",
                        "default_popup" : "popup.html"},
