have page script talking to controller

--- a/jrx/manifest.json
+++ b/jrx/manifest.json
@@ -2,11 +2,12 @@
  "name"             : "Jack Russell",
  "version"          : "0.1.0",
  "description"      : "Browser wallet extension for Aeternity",
- "icons"            : {"48" : "icons/jrx-icon-48.png",
-                       "96" : "icons/jrx-icon-96.png"},
+ "icons"            : {"48" : "art/jrx-icon-48.png",
+                       "96" : "art/jrx-icon-96.png"},
  "content_scripts"  : [{"matches" : ["*://*/*"],
                         "js"      : ["dist/content.js"]}],
- "browser_action"   : {"default_icon"  : "icons/jrx-icon-32.png",
-                       "default_title" : "Jaeck Russell",
+ "browser_action"   : {"default_icon"  : "art/jrx-icon-32.png",
+                       "default_title" : "Jæck Russell",
                        "default_popup" : "popup.html"},
+ "background"       : {"scripts": ["dist/background.js"]},
  "permissions"      : ["storage"]}
