--- a/jrx/manifest.json
+++ b/jrx/manifest.json
@@ -1,13 +1,14 @@
-{"manifest_version" : 2,
- "name"             : "Jack Russell",
- "version"          : "0.1.0",
- "description"      : "Browser wallet extension for Aeternity",
- "icons"            : {"48" : "art/jrx-icon-48.png",
-                       "96" : "art/jrx-icon-96.png"},
- "content_scripts"  : [{"matches" : ["*://*/*"],
-                        "js"      : ["dist/content.js"]}],
- "browser_action"   : {"default_icon"  : "art/jrx-icon-32.png",
-                       "default_title" : "Jæck Russell",
-                       "default_popup" : "popup.html"},
- "background"       : {"page" : "background.html"},
- "permissions"      : ["storage"]}
+{"manifest_version"        : 2,
+ "name"                    : "Jack Russell",
+ "version"                 : "0.1.0",
+ "description"             : "Browser wallet extension for Aeternity",
+ "icons"                   : {"48" : "art/jrx-icon-48.png",
+                              "96" : "art/jrx-icon-96.png"},
+ "content_scripts"         : [{"matches" : ["*://*/*"],
+                               "js"      : ["dist/content.js"]}],
+ "browser_action"          : {"default_icon"  : "art/jrx-icon-32.png",
+                              "default_title" : "Jæck Russell",
+                              "default_popup" : "popup.html"},
+ "background"              : {"page" : "background.html"},
+ "content_security_policy" : "script-src 'self'; object-src 'self'",
+ "permissions"             : ["storage"]}
