--- a/jrx/manifest.json
+++ b/jrx/manifest.json
@@ -1,4 +1,4 @@
-{"manifest_version"        : 2,
+{"manifest_version"        : 3,
  "name"                    : "Jack Russell",
  "version"                 : "0.1.0",
  "description"             : "Browser wallet extension for Aeternity",
@@ -6,7 +6,7 @@
                               "96" : "art/jrx-icon-96.png"},
  "content_scripts"         : [{"matches" : ["*://*/*"],
                                "js"      : ["dist/content.js"]}],
- "browser_action"          : {"default_icon"  : "art/jrx-icon-32.png",
+ "action"                  : {"default_icon"  : "art/jrx-icon-32.png",
                               "default_title" : "Jæck Russell",
                               "default_popup" : "pages/popup.html"},
  "background"              : {"page" : "pages/background.html"},
