[wip] everything is stupid and i hate everyone and everything
the correct thing to do at this point is to factor out "show a yes/no popup
window to user"

the complexity in "open a window and then execute some code in the context of
that window" is mind-boggling

nothing works

--- a/jrx/manifest.json
+++ b/jrx/manifest.json
@@ -10,4 +10,5 @@
                               "default_title" : "Jæck Russell",
                               "default_popup" : "pages/popup.html"},
  "background"              : {"page" : "pages/background.html"},
- "permissions"             : ["storage", "history"]}
+ "permissions"             : ["storage", "scripting"],
+ "host_permissions"        : ["*://*/*"]}
